# WEB-HW7

./: README.md  config.ini  my_select.py  pyproject.toml  seeds.py
migrations/versions/: 8039c201ffbc_init.py
