[tool.poetry]
name = "hw7-web"
version = "0.1.0"
description = ""
authors = ["Kiril Sheremeta <120675223+kirilsheremeta@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hw7_web"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.13"
psycopg2 = "^2.9.6"
faker = "^18.7.0"
alembic = "^1.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
